--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      MONGODB_URI: mongodb://database:27017/test
+      MONGODB_URI: mongodb://mongo:27017/test
   mongo:
     image: mongo:latest
     container_name: mongo
